apps/media/sonarr/egress-allow-qbittorrent.yaml
---
# sonarr sends grabbed releases to qbittorrent's API, which lives in the separate
# (privileged) qbittorrent namespace behind gluetun.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr-egress-qbittorrent
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
